<resources>
    <string name="app_name">Dating Sim</string>
    <string name="settingsButton">Settings</string>
    <string name="glossaryButton">Glossary</string>
    <string name="restartButton">Restart</string>
    <string name="musicButton">Music</string>
    <string name="soundButton">Sound</string>
    ----------------------------------------------
    <string name="title">Character Map</string>
    <string name="swamp">Swamp</string>
    <string name="freds">Fred\'s Pizzeria</string>
    <string name="olympus">Olympus</string>
    <string name="hell">Hell</string>
    <string name="japan">Japan</string>
    -----------------------------------------------
    <string name="titleText">Untitled Dating Sim</string>
    <string name="continueButton">Continue</string>
    <string name="startButton">New Game</string>
    ----------------------------------------------
    <string name="satan">SATAN</string>
    <string name="shruck">SHRUCK</string>
    <string name="zeus">ZEUS</string>
    <string name="bonny">BONNY</string>
    <string name="jojoson">SCARLET JOJOSON</string>
    <string name="jojoson2">JOJOSON</string>
    <string name="alone">NO ONE</string>
    <string name="affection">Affection Points:</string>
    <string name="choiceText">Choose a Character</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="kissingGame">Kiss Me!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="triviaGame">Trivia Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="riddleGame">Riddle Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="date">Do you want to go on another date?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="yesButton">Yes</string>
    <string name="noButton">No</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="enterNameText">Please Enter Your Name</string>
    <string name="playerNameText">Enter Name</string>
    <string name="playButton">Play</string>
    <string name="DateButton">Date</string>
    <string name="NextButton">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="doneButton">Done</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Statstext">Game Stats</string>
    <string name="points">Game Points:</string>
    <string name="timescaught">Times Caught:</string>


</resources>