<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.InstructionsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/instructionScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/gameName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="336dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="337dp"
            android:layout_marginBottom="357dp"
            android:scaleX="3"
            android:scaleY="3"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gameInstructions"
            android:layout_width="500dp"
            android:layout_height="200dp"
            android:layout_marginStart="115dp"
            android:layout_marginTop="51dp"
            android:layout_marginEnd="116dp"
            android:layout_marginBottom="105dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameName" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>