...
            android:text="@string/Statstext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/statsNextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="586dp"
            android:layout_marginTop="319dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="44dp"
...
