...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CharacterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/characterScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/characterAffection"
            android:layout_width="wrap_content"
...
